とりあえずscraper実装

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,4 @@
-MYSQL_HOST=
-MYSQL_USER=
-MYSQL_PASSWD=
-MYSQL_DB=
-MYSQL_CHARSET=utf8
+DATA_BACKEND=
+PROJECT_ID=
+DATASTORE_KIND=
+CLOUD_STORAGE_BUCKET=
